--- a/src/index.scss
+++ b/src/index.scss
@@ -25,7 +25,6 @@
 body,
 html {
   font-size: 10px;
-  height: 200vh;
 }
 
 .container {
@@ -45,11 +44,13 @@ html {
   height: 50px;
   background-color: black;
   color: white;
+  z-index: 1;
   h1 {
     position: absolute;
     min-width: 100vw;
     left: 0;
     text-align: center;
+    text-transform: uppercase;
   }
 }
 
@@ -61,6 +62,7 @@ html {
   bottom: 0;
   background-color: black;
   color: white;
+  z-index: 1;
   ul {
     list-style-type: none;
     li {
@@ -99,7 +101,7 @@ html {
 
 .navigationBtn {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   margin-left: 10px;
   width: 35px;
   height: 35px;
@@ -117,6 +119,87 @@ html {
   font-size: 2rem;
   color: white;
   border: none;
+}
+
+.pageContainer {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vh;
+  .appLogo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+  }
+}
+
+.leagueTabelContainer {
+  margin: 80px auto;
+  width: 90%;
+  box-shadow: 0px 0px 8px 3px black;
+  display: flex;
+  flex-direction: column;
+  .tabelHeader {
+    line-height: 20px;
+    background-color: red;
+    color: white;
+  }
+  .tabelTeamRow {
+    display: flex;
+    align-items: center;
+    padding: 5px 5px;
+    border-bottom: 1px solid grey;
+    .teamName {
+      display: flex;
+      align-items: center;
+      flex-grow: 1;
+      text-align: left;
+      .teamLogo {
+        margin-right: 5px;
+        height: 20px;
+      }
+    }
+    div {
+      min-width: 25px;
+      text-align: center;
+      padding: 2px;
+    }
+  }
+}
+
+.topScorersTabelContainer {
+  margin: 80px auto;
+  width: 90%;
+  box-shadow: 0px 0px 8px 3px black;
+  display: flex;
+  flex-direction: column;
+  .topScorersHeader {
+    line-height: 20px;
+    background-color: red;
+    color: white;
+  }
+  .topScorersPlayerRow {
+    display: flex;
+    align-items: center;
+    padding: 5px 5px;
+    border-bottom: 1px solid grey;
+    .playerName {
+      flex-grow: 1;
+      text-align: left;
+    }
+    .teamName {
+      min-width: 30%;
+      text-align: left;
+    }
+    div {
+      min-width: 25px;
+      text-align: center;
+      padding: 2px;
+    }
+  }
 }
 
 .hide {
@@ -145,28 +228,4 @@ html {
     }
   }
   @include animate(showPanel, 0.3s, linear, 0s, 1, normal, forwards);
-}
-
-.slide {
-  @include keyframes(slidePanel) {
-    0% {
-      left: 0;
-    }
-    100% {
-      left: 70%;
-    }
-  }
-  @include animate(slidePanel, 0.3s, linear, 0s, 1, normal, forwards);
-}
-
-.backSlide {
-  @include keyframes(backSlidePanel) {
-    0% {
-      left: 70%;
-    }
-    100% {
-      left: 0;
-    }
-  }
-  @include animate(backSlidePanel, 0.3s, linear, 0s, 1, normal, forwards);
 }
